add visit details to v2 doctor search (GO-67)
